@@ -334,6 +334,9 @@ DECL_TEMPLATE(linux, sys_memfd_secret);
 // Linux-specific (since Linux 5.6)
 DECL_TEMPLATE(linux, sys_pidfd_getfd);
 
+// Since Linux 6.6
+DECL_TEMPLATE(linux, sys_fchmodat2);
+
 /* ---------------------------------------------------------------------
    Wrappers for sockets and ipc-ery.  These are split into standalone
    procedures because x86-linux hides them inside multiplexors
